# dns

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  dns.h  logger.h  net.h  thread_pool.h
include/recursive/: parser.h  rec_balancer.h
src/: dns.c  net.c  thread_pool.c
src/recursive/: README.md  main.c  parser.c  rec_balencer.c
